# RAG

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/classes/: ingestion.py  rag.py  reranker.py  store.py
app/models/: schemas.py
app/routes/: rag.py
app/utils/: config.py
tests/: test_rag_api.py
tests/data/: story.txt  story1_questions.txt
